@@ -1,3 +1,13 @@
+Wed Nov 11 03:51:37 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>
+
+        * cuts/utils/testing/svcs/logging/Log_Message_Table.h:
+        * cuts/utils/testing/svcs/logging/Trace_Importer_App.cpp:
+        * cuts/utils/testing/svcs/logging/Trace_Importer_Parser.cpp:
+
+          . Refactored the system execution trace importer to use the
+            CUTS_Log_Message_Table class to ensure the database is properly
+            initialized.
+
 Fri Nov  6 02:32:49 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>
 
         * MDE/GME/T2M/executor/Executor_App.cpp:
